# rau

./: .gitignore  Cargo.toml  LICENSE.md  build.rs  index.html  project.toml  vs.glsl
.claude/skills/featured-project/: SKILL.md
.claude/skills/featured-project/references/: resource-api.md
.github/workflows/: build.yml  deploy.yml  pages.yml
assets/: frag.glsl  project.toml  vs.glsl
projects/bloom/: blur_horizontal.wgsl  composite.wgsl  extract.wgsl  project.json  scene.wgsl
projects/bloom-hdr/: blur_vertical.wgsl  project.json
projects/depth-testing/: cubes.wgsl  depth_view.wgsl  floor.wgsl  project.json
projects/full-example/: equirectangular.wgsl  light.wgsl  project.json  shader.wgsl
projects/fur-shell/: fur.wgsl  project.json
projects/game-of-life/: copy.wgsl  init.wgsl  project.json  render.wgsl  simulate.wgsl
projects/grass-field/: grass.wgsl  ground.wgsl  project.json
projects/heightmap/: project.json  terrain.wgsl
projects/many-lights/: gbuffer_normal.wgsl  gbuffer_position.wgsl  lighting.wgsl  project.json
projects/model/: project.json  shader.wgsl
projects/model/metal_barrel/: metal_barrel.mtl
projects/parallax-mapping/: project.json  shader.wgsl
projects/shadow-mapping/: project.json  scene.wgsl  shadow.wgsl
projects/sky-shader/: project.json  sky.wgsl
projects/ssao/: backpack_normal.wgsl  backpack_position.wgsl  blur.wgsl  lighting.wgsl  project.json  room_normal.wgsl  room_position.wgsl  ssao.wgsl
projects/triangle/: project.json  shader.wgsl
res/: shader.wgsl
src/: app.rs  camera.rs  cli.rs  error.rs  featured_projects.rs  file.rs  file_storage.rs  gui.rs  hdr.rs  key.rs  lib.rs  light.wgsl  main.rs  main_menu.rs  model.rs  project.rs  rebuild.rs  registry.rs  render.rs  resources.rs  scene.rs  shader.wgsl  state.rs  texture.rs  uniform.rs  viewport.rs  workspace.rs
src/file/: absolute.rs  file_storage.rs  file_watcher.rs  identifier.rs  indexed_db.rs  mod.rs
src/file/app_config/: mod.rs  native.rs  wasm.rs
src/file/file_system/: ephemeral.rs  mod.rs  native.rs  wasm.rs
src/fs/: absolute.rs  file_system.rs  file_watcher.rs  identifier.rs  mod.rs
src/fs/file_system/: mod.rs  native.rs  wasm.rs
src/project/: bindgroup.rs  camera.rs  compute_pass.rs  dimension.rs  file.rs  frame_plan.rs  macros.rs  mod.rs  model.rs  paths.rs  recreate.rs  render.rs  render_pass.rs  render_schedule.rs  renderpass.rs  sampler.rs  save.rs  shader.rs  storage.rs  sync.rs  texture.rs  texture_view.rs  uniform.rs  viewport.rs
src/project/model/: vertex_buffer.rs
src/project/resource/: bindgroup.rs  camera.rs  compute_pass.rs  dimension.rs  frame_plan.rs  mod.rs  model.rs  presentation.rs  render_pass.rs  render_pipeline.rs  sampler.rs  shader.rs  texture.rs  texture_view.rs  uniform.rs  viewport.rs
src/project/resource/model/: vertex_buffer.rs
src/project/resource/uniform/: camera.rs  tests.rs
src/project/shader_code/: backend.rs  contribute.rs  ir.rs  mod.rs  tests.rs  wgsl.rs
src/project/uniform/: camera.rs  tests.rs
src/renderer/: camera.rs  egui_renderer.rs  gui.rs  mod.rs  model.rs  shader.rs  texture.rs  uniform.rs  vertex.rs
src/scene/: bloom.rs  depth_testing.rs  full_example.rs  fur_shell.rs  game_of_life.rs  grass_field.rs  hdr.rs  hdr.wgsl  heightmap.rs  loader.rs  many_lights.rs  mod.rs  model.rs  parallax_mapping.rs  shadow_mapping.rs  sky_shader.rs  ssao.rs
src/startup/: cli.rs  mod.rs  url.rs
src/ui/: bind_group_inspector.rs  fonts.rs  mod.rs  pane.rs  rename.rs  renderer.rs  size.rs  theme.rs  uniform_inspector.rs  viewport.rs
src/ui/components/: code_editor.rs  color_edit.rs  create_project_modal.rs  data_display.rs  delete_project_confirmation_modal.rs  derive_modal_material_modal.rs  derive_model_material_modal.rs  draggable_list.rs  edit_number_array.rs  field.rs  field_container.rs  field_docs.rs  file_editor.rs  flags_selector.rs  hint.rs  inspector.rs  mod.rs  open_or_import_project.rs  project_leaf_node.rs  recent_projects.rs  rename_text_edit.rs  renameable_label.rs  resource_icons.rs  selector.rs  tiles.rs  tree_node.rs  viewport.rs
src/ui/components/main_menu/: featured_projects.rs  menu_widgets.rs  mod.rs  open_or_import_project.rs  recent_projects.rs
src/ui/components/syntaxes/: WavefrontMTL.sublime-syntax  WavefrontOBJ.sublime-syntax
src/ui/panels/: error_panel.rs  files_panel.rs  inspector_pane.rs  menu_bar.rs  mod.rs  pane_utils.rs  project_tree_panel.rs  status_bar.rs  viewport_pane.rs
src/ui/panels/inspectors/: WGSL.sublime-syntax  bind_group_inspector.rs  camera_inspector.rs  compute_pass_inspector.rs  dimension_inspector.rs  file_inspector.rs  frame_plan_inspector.rs  mod.rs  model_inspector.rs  presentation_inspector.rs  render_pass_inspector.rs  (+8 more)
src/utils/: async_job.rs  background_task.rs  browser.rs  browser_folder_picker.rs  derive.rs  derive_modal_material.rs  dir_node.rs  event_queue.rs  fps.rs  github.rs  icon.rs  key.rs  mod.rs  obj.rs  pollable_future.rs  raw_scroll.rs  resizable_buffer.rs  resources.rs  shader.rs  texture_capture.rs  texture_format.rs  validate_bind_group_layouts.rs  vec_set_at_extension.rs  wgpu_error_scope.rs  wgpu_utils.rs  winit_runner.rs
src/utils/browser/: file_download.rs  folder_picker.rs  mod.rs  url.rs
src/utils/shader_preview/: backend.rs  contribute.rs  glsl.rs  ir.rs  tests.rs  wgsl.rs
(+4 files in other folders)
