[package]
name = "rau"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
# use a different name here to avoid duplicate name
# see https://github.com/rust-lang/cargo/issues/6313
name = "rau-bin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
cgmath = "0.18.0"
# Using revisions until wgpu in egui gets updated to 28.0
egui = { git = "https://github.com/emilk/egui.git", rev = "4a9fc7e6417b9ca838b880f2a89fd16468aece67" }
egui-wgpu = { git = "https://github.com/emilk/egui.git", rev = "4a9fc7e6417b9ca838b880f2a89fd16468aece67" }
egui-winit = { git = "https://github.com/emilk/egui.git", rev = "4a9fc7e6417b9ca838b880f2a89fd16468aece67", default-features = false }
env_logger = "0.11.8"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "hdr"] }
instant = "0.1"
log = "0.4.29"
pollster = "0.4.0"
tobj = { version = "4.0.3", default-features = false, features = ["futures"] }
wgpu = { version = "28.0" }
winit = { version = "0.30.12", features = ["android-native-activity"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Enable default features for egui-winit
egui-winit = { git = "https://github.com/emilk/egui.git", rev = "4a9fc7e6417b9ca838b880f2a89fd16468aece67", default-features = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Disable default features as egui-winit arboard is not compatible with wasm32
egui-winit = { git = "https://github.com/emilk/egui.git", rev = "4a9fc7e6417b9ca838b880f2a89fd16468aece67", default-features = false }
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
reqwest = "0.12"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
